@@ -6,7 +6,7 @@
 		<import addon="script.module.simplejson" version="3.3.0" />
 		<import addon="script.module.requests" version="2.9.1" />
 		<import addon="script.module.cachecontrol" version="0.11.5" />
-		<import addon="script.module.devhelper" version="0.1.3" />
+		<import addon="script.module.devhelper" version="0.1.4" />
 	</requires>
 	<extension point="xbmc.python.script" library="default.py">
 		<provides>executable</provides>
